--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -15,6 +15,6 @@
     "DefaultPageNumber": 1
   },
   "Authentication": {
-    "SecretKey":  "T3cn0f4ct0ryS4S**" 
+    "SecretKey":  "S3cr3tK3y2022**" 
   }
 }
